* type=application | introduce actions=delete and actions=delete-force
* type=html-merger | adjust helping information
* type=playbook | support reading argument projectfolder from JSON playbook file
* type=zone | actions=exporttoexcel - extend information with ZoneProtectionProfile
* type=rule actions=exporttoexcel:file.html - rename column 'security' to 'security-profile'

BUGFIX:
* type=securityprofile | bugfix to delete also customURLProfile objects
* type=device | bugfix panos >100 - for all actions=*-create-*-bp to use coorect iron-skillet snippet

GENERAL
* update Dockerfiles related to ironskillet yaml usage
* set sleeping time for deprecated scripts to 600sec


2.0.66 (20230126)
UTIL:
* type=address/service | introduce 'filter=(reflocationcount ><=! NUMBER)'
* type=diff | introduce more options for 'filter=file.json' - 'added'/'deleted'/'moved' to not display xPath diff, if already accepted and known
* type=xpath | newly introduced utility to search for XML xpath value by using node-filter / xpath-filter / nameattribute-filter | additional output display-xmlnode, display-nameattribute
* type=diff | only avoid display of whitespaces in DIFF for xpath */certificate/ if flag is set
* type=rule-merger | improvements if DENY rules are found between possible rule for merging
* type=diff | introduce more options for 'filter=file.json' - 'combinedruleordercheck'
* type=diff | improve FinalResult output
* type=diff | filter JSON file with "combinedruleordercheck" - use Rule name and no longer UUID as unique key
* type=diff | if filter JSON file is using 'added'/'deleted' - ignore DIFF output
* type=diff | if filter JSON file is using 'empty' - ignore DIFF output of empty rules XMLnodes in DIFF output
* type=ironskillet-update | download yaml file
* type=ironskillet-update | introduce new iron-skillet yaml download and create XML snippets
* type=device | introduce 'actions=zpp-create-alert-only-bp' / 'actions=zpp-create-bp'