@@ -1,0 +1,53 @@
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+      xmlns:o="urn:schemas-microsoft-com:office:office"
+      xmlns:x="urn:schemas-microsoft-com:office:excel"
+      xmlns="http://www.w3.org/TR/REC-html40">
+<head>
+    <style>
+        #br {
+            mso-data-placement: same-cell;
+        }
+
+        table td {
+            #background-color: #ccc;
+            border: 1px solid #999;
+            padding: 5px;
+            vertical-align: middle;
+        }
+
+        table th {
+            background-color: #555;
+            color: #fff;
+            border: 1px solid #999;
+            padding: 5px;
+            vertical-align: middle;
+        }
+    </style>
+</head>
+<body>
+<table>
+    <thead>
+    <tr>
+        <th>headerA</th>
+		<th>headerB</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>CONTENTA1</td>
+		<td>CONTENTB1</td>
+    </tr>    
+    <tr>
+        <td>CONTENTA2</td>
+		<td>CONTENTB2</td>
+    </tr>    
+    </tbody>
+</table>
+</body>
+<footer>
+    <script type="text/javascript">
+        %
+        JSCONTENT %
+    </script>
+</footer>
+</html>
